--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,29 @@
     margin: 0;
     box-sizing: border-box;
 }
+html{
+    font-family: sans-serif;
+}
 
 /* general */
 
+body{
+    background-color: black;
+}
 .debug{
     border: 1px solid black;
 }
 .flex-container-nowrap{
     display: flex;
-    /* flex-direction: row;
-    flex-wrap: nowrap; */
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items:center;
 }
 .flex-container-wrap{
     display: flex;
-    /* flex-direction: row;
-    flex-wrap: nowrap; */
     flex-flow: row wrap;
-    justify-content: flex-start;
-    align-items:center;    
+    justify-content: center;
+    align-content:center;   
 }
 
 /* header */
@@ -37,16 +39,54 @@ header{
     width: 100%;
     height: 80px;    
     background-color: black;
+    z-index: 5000;
+    
+}
+.view-mode{
+    color: white;
+    margin: 8px 5px;
+    float: right;
+}
+.view-mode>span{
+    background-color: rgb(74,74,74);
+    margin-left: 5px;
+    line-height: 30px;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 12px;    
 }
 
 /* main */
 
 main{
     width: 100%;
-    height: calc(100vh - 180px);
     margin-top: 80px;
-    background-color: red;
+    margin-bottom: 100px;
 }
+.user-webcam{
+    width: 200px;
+    height: 100px;
+    position: relative;
+    margin: 5px 4px;
+}
+.user-webcam img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.user-name{
+    background-color: rgba(103,115,128,0.6);
+    color: white;
+    font-size: 10px;
+    position: absolute;
+    top: 80px;
+    left: 0;
+}
+.user-name>span {
+    line-height: 20px;
+    padding: 0 5px; 
+}
+
 /* footer */
 
 footer{
