--- a/css/style.css
+++ b/css/style.css
@@ -1,99 +1,156 @@
 /* reset */
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-html{
-    font-family: sans-serif;
+html {
+  font-family: sans-serif;
 }
 
 /* general */
 
-body{
-    background-color: black;
+body {
+  background-color: black;
 }
-.debug{
-    border: 1px solid black;
+.debug {
+  border: 1px solid black;
 }
-.flex-container-nowrap{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items:center;
+.flex-container-nowrap {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
 }
-.flex-container-wrap{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-content:center;   
+.flex-container-wrap {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-content: center;
 }
 
 /* header */
 
-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;    
-    background-color: black;
-    z-index: 5000;
-    
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background-color: black;
+  z-index: 5000;
 }
-.view-mode{
-    color: white;
-    margin: 8px 5px;
-    float: right;
+.view-mode {
+  color: white;
+  margin: 8px 5px;
+  float: right;
 }
-.view-mode>span{
-    background-color: rgb(74,74,74);
-    margin-left: 5px;
-    line-height: 30px;
-    padding: 5px;
-    border-radius: 5px;
-    font-size: 12px;    
+.view-mode > span {
+  background-color: rgb(74, 74, 74);
+  margin-left: 5px;
+  line-height: 30px;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 /* main */
 
-main{
-    width: 100%;
-    margin-top: 80px;
-    margin-bottom: 100px;
+main {
+  width: 100%;
+  margin-top: 80px;
+  margin-bottom: 100px;
 }
-.user-webcam{
-    width: 200px;
-    height: 100px;
-    position: relative;
-    margin: 5px 4px;
+.user-webcam {
+  width: 200px;
+  height: 100px;
+  position: relative;
+  margin: 5px 4px;
 }
-.user-webcam img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.user-webcam img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.user-name{
-    background-color: rgba(103,115,128,0.6);
-    color: white;
-    font-size: 10px;
-    position: absolute;
-    top: 80px;
-    left: 0;
+.user-name {
+  background-color: rgba(103, 115, 128, 0.6);
+  color: white;
+  font-size: 10px;
+  position: absolute;
+  top: 80px;
+  left: 0;
 }
-.user-name>span {
-    line-height: 20px;
-    padding: 0 5px; 
+.user-name > span {
+  line-height: 20px;
+  padding: 0 5px;
 }
 
 /* footer */
 
-footer{
-    position: fixed;
-    bottom:0;
-    left:0;
-    width: 100%;
-    height: 100px;    
-    background-color: grey;
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background-color: rgb(34, 34, 34);
+  display: flex;
+}
+.left-footer,
+.center-footer,
+.right-footer {
+  text-align: center;
+  height: 80px;
+  display: flex;
+  overflow-y: hidden;
+}
+.left-footer,
+.right-footer {
+  width: 20%;
+}
+.left {
+  justify-content: flex-start;
+}
+.center {
+  justify-content: center;
+}
+.right {
+  justify-content: flex-end;
+}
+.footer-block {
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin: 0 10px;
+}
+.icon {
+  font-size: 24px;
+  cursor: pointer;
+}
+footer .text {
+  font-size: 12px;
+}
+.fa-angle-up {
+  font-size: 12px;
+}
+.center-footer {
+  width: 60%;
+}
+.right-footer > .footer-block {
+  margin-right: 0;
+}
+button {
+  height: 100%;
+  background-color: rgb(74, 74, 74);
+  padding: 0 20px;
+  cursor: pointer;
+  color: red;
+  border: none;
+}
+.fa-share-from-square {
+  color: rgb(75, 200, 0);
 }
