--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
+  min-width: 800px;
   height: 80px;
   background-color: rgb(34, 34, 34);
   display: flex;
@@ -143,14 +144,80 @@ footer .text {
 .right-footer > .footer-block {
   margin-right: 0;
 }
-button {
+.footer-block > button {
   height: 100%;
   background-color: rgb(74, 74, 74);
   padding: 0 20px;
   cursor: pointer;
   color: red;
   border: none;
+  position: relative;
 }
 .fa-share-from-square {
   color: rgb(75, 200, 0);
+}
+.hidden-button {
+  width: 150px;
+  height: 75px;
+  line-height: 75px;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  bottom: 80px;
+  background-color: rgb(74, 74, 74);
+  font-size: 14px;
+  color: red;
+  border: 1px solid black;
+  display: none;
+}
+.hidden-button .fa-hourglass-end {
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotation(0deg);
+  }
+  90% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
+}
+.hidden-button > .close > a {
+  display: block;
+  color: red;
+  text-decoration: none;
+}
+.close {
+  display: inline-block;
+  text-align: center;
+  line-height: 50px;
+  background: rgb(74, 74, 74);
+}
+.footer-block > button:active + .hidden-button {
+  display: block;
+}
+#invite {
+  position: relative;
+}
+.hidden-invite {
+  position: absolute;
+  height: 200px;
+  width: 200px;
+  text-align: center;
+  background-color: rgb(34, 34, 34);
+  top: -200px;
+  border: 1px solid black;
+  display: none;
+}
+.hidden-invite span {
+  display: inline-block;
+  width: 200px;
+  height: 25%;
+  line-height: 50px;
+  border: 1px solid black;
+}
+#invite:hover + .hidden-invite {
+  display: block;
 }
